styles/main.css
@import url("@radix-ui/colors/gray.css");
@import url("@radix-ui/colors/gray-alpha.css");
@import url("@radix-ui/colors/gray-dark.css");
@import url("@radix-ui/colors/gray-dark-alpha.css");
@import url("@radix-ui/colors/pink.css");
@import url("@radix-ui/colors/pink-alpha.css");
@import url("@radix-ui/colors/pink-dark.css");
@import url("@radix-ui/colors/pink-dark-alpha.css");
@import url("@radix-ui/colors/yellow.css");
@import url("@radix-ui/colors/yellow-alpha.css");
@import url("@radix-ui/colors/yellow-dark.css");
@import url("@radix-ui/colors/yellow-dark-alpha.css");
@import url("@radix-ui/colors/black-alpha.css");
@import url("@radix-ui/colors/white-alpha.css");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /*
  * We are using the Radix UI Colors package to generate a set of color variables that can be used in the project.
  * @see: https://colors.radix-ui.com/
  */

  :root {
    --bg: var(--gray-2);
    --fg: var(--gray-12);
    --muted: var(--gray-8);
    --border: var(--gray-4);
    --scrollbar-thumb: var(--gray-4);
    --scrollbar-track: transparent;
    --kbd-background: var(--gray-3);
    --kbd-foreground: var(--gray-11);
    --kbd-border: var(--gray-4);
    --highlight-background: var(--yellow-3);
    --highlight-foreground: var(--yellow-11);
    --radius-small: 4px;
    --radius-base: 8px;
    --radius-large: 12px;
  }

  * {
    --webkit-font-smoothing: antialiased;
    --moz-osx-font-smoothing: grayscale;

    font-variant-ligatures: common-ligatures;
    text-wrap: pretty;
    text-rendering: optimizelegibility;
  }

  html {
    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
    scrollbar-gutter: stable;
    scrollbar-width: thin;
    scroll-behavior: smooth;
  }

  html {
    @apply text-foreground bg-background;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply font-medium;
    }

    sub,
    sup {
      @apply text-muted;
    }

    sub {
      @apply text-small;
    }

    a {
      @apply transition hover:underline;

      &:focus,
      &:active {
        outline: none;
        box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.2);
      }

      &[target="_blank"] {
        position: relative;

        &:after {
          position: relative;
          top: -2px;
          margin-left: 2px;
          content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' class='i-external' viewBox='0 0 32 32' width='12' height='12' fill='none' stroke='rgba(73,80,87,0.7)' stroke-linecap='round' stroke-linejoin='round' stroke-width='9.38%'><path d='M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18'/></svg>");
        }
      }
    }

    button {
      &:focus,
      &:active {
        outline: none;
        box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.2);
      }
    }

    kbd {
      @apply mx-1;

      display: inline-block;
      min-width: 20px;
      height: 20px;
      min-height: 20px;
      padding: 0 6px;
      font-size: 12px;
      line-height: 20px;
      text-align: center;
      background: var(--kbd-background);
      border-radius: 4px;
      box-shadow: 0 0 0 1px var(--kbd-border);
    }
  }

  body {
    display: grid;
    grid-template-columns: [start] 1rem [left-sidebar] 0 [main] 1fr [right-sidebar] 0 [right-edge] 1rem [end];

    @media all and (min-width: 768px) {
      grid-template-columns: [start] auto [left-sidebar] 0 [main] 700px [right-sidebar] 0 [right-edge] auto [end];
    }

    @media all and (min-width: 1024px) {
      grid-template-columns: [start] auto [left-sidebar] 160px [main] 700px [right-sidebar] 160px [right-edge] auto [end];
    }
  }

  article {
    h1 + h2 {
      margin-top: 4px !important;
    }

    h1 + p,
    h2 + p {
      margin-top: 8px !important;
    }

    figure + h1,
    p + h1 {
      margin-top: 48px !important;
    }

    p:not(:first-child),
    h1:not(:first-child),
    h2:not(:first-child),
    h3:not(:first-child),
    h4:not(:first-child),
    h5:not(:first-child),
    h6:not(:first-child),
    blockquote:not(:first-child),
    ul:not(:first-child),
    ol:not(:first-child),
    pre:not(:first-child),
    figure:not(:first-child) {
      margin-bottom: 24px;
    }

    code {
      font-size: 0.875rem;
    }

    ul {
      li {
        list-style-type: "✦";

        ul li {
          list-style-type: "-";
        }
      }
    }

    /*
    * This handles our highlighting on selection of a table of contents item.
    */

    [data-highlight] {
      @apply relative;
    }

    [data-highlight]::before {
      @apply absolute inset-0 -inset-x-1 -z-10 bg-transparent transition scale-y-[1.1] content-[""] duration-500;
    }

    [data-highlight="true"]::before {
      @apply bg-highlight-background text-highlight-foreground scale-y-110 !important;
    }

    [data-highlight="false"]::before {
      @apply bg-transparent scale-y-100;
    }

    /* 
    * Here we are setting up the styles for our footnotes and references.
    */

    .footnotes {
      position: relative;
      padding-top: 16px;
      margin-top: 64px !important;
      border-top: 1px solid var(--border);
    }

    .footnotes ol {
      position: relative;
      display: block;
      padding: 0 0 0 4px;
      margin-top: 16px !important;
      list-style: none;
    }

    .footnotes li {
      margin-top: 0 !important;
    }

    .footnotes ol li {
      position: relative;
      padding-top: 4px;
      padding-left: 6px;
      font-size: 12px;
      color: var(--muted);
      counter-increment: list;
    }

    .footnotes ol li::before {
      position: absolute;
      top: 0;
      right: 100%;
      font-size: 8px;
      content: counter(list);
    }

    .footnotes ol li p a {
      z-index: 2;
    }

    figure[data-mdx-image] {
      display: grid;

      @media all and (min-width: 1024px) {
        grid-template-columns: [main] 700px [right-sidebar] 160px [right-edge];
      }
    }
  }

  /* 
  * We are using rehypye-pretty to style the code blocks in the project.
  * rehype-pretty-code is a Rehype plugin powered by the shiki syntax highlighter that provides beautiful code blocks for Markdown or MDX. 
  * It works on both the server at build-time (avoiding runtime syntax highlighting) and on the client for dynamic highlighting.
  * @see: https://rehype-pretty.pages.dev/
  */

  /* 
  * Here we are setting up the styles needed to enable theme-aware code blocks.
  * @see: https://rehype-pretty.pages.dev/#multiple-themes-dark-and-light-mode
  */

  html {
    code[data-theme*=" "],
    code[data-theme*=" "] span {
      color: var(--shiki-light);
      background-color: var(--shiki-light-bg);
    }

    &.dark {
      code[data-theme*=" "],
      code[data-theme*=" "] span {
        color: var(--shiki-dark);
        background-color: var(--shiki-dark-bg);
      }
    }
  }

  /* 
  * Here we are setting up the styles needed to enable line numbers in code blocks.
  * @see: https://rehype-pretty.pages.dev/#line-numbers
  */

  html {
    code[data-line-numbers] {
      counter-reset: line;
    }

    code[data-line-numbers] > [data-line]::before {
      display: inline-block;
      width: 12px;
      margin-right: 2rem;
      color: gray;
      text-align: right;
      content: counter(line);
      counter-increment: line;
    }

    code[data-line-numbers-max-digits="2"] > [data-line]::before {
      width: 1.25rem;
    }

    code[data-line-numbers-max-digits="3"] > [data-line]::before {
      width: 1.75rem;
    }

    code[data-line-numbers-max-digits="4"] > [data-line]::before {
      width: 2.25rem;
    }

    :is(p, li) [data-line] {
      padding: 2px 4px;
      margin-right: 2px;
      margin-left: 2px;
      text-align: center;
      background-color: var(--kbd-background) !important;
      border-radius: 4px;
      box-shadow: 0 0 0 1px var(--kbd-border);
    }
  }

  /* 
  * Here we are just some additional styles to make the code blocks look better.
  * @see: https://rehype-pretty.pages.dev/#styles
  */

  * {
    pre {
      padding: 16px;
      overflow-x: auto;
      font-size: 0.875rem;

      [data-line] {
        margin-top: 0 !important;
      }
    }

    figure[data-rehype-pretty-code-figure] {
      width: 100%;
      margin-top: 4px;
      border: 1px solid var(--border);
      background: var(--gray-1);
    }
  }
}

